More precise auto-pause, correctly calculating current clip and last active subtitled clip (especially on region resize, jumping between clips etc.)

--- a/src/app/features/project-details/timeline-editor/timeline-editor.component.scss
+++ b/src/app/features/project-details/timeline-editor/timeline-editor.component.scss
@@ -3,14 +3,4 @@
   width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
-
-  ::ng-deep [part~="region"] {
-    border-left: 1px solid rgba(0, 0, 0, 0.5);
-    border-right: 1px solid rgba(0, 0, 0, 0.5);
-    box-sizing: border-box;
-  }
-
-  ::ng-deep .wavesurfer-handle {
-    background-color: #ff4500;
-  }
 }
